--- a/README
+++ b/README
@@ -1,9 +1,9 @@
-CBlog is a blog engine written
+CBlog is a blog engine written in C
 
 it is licensed under the new BSD license.
 it features : 
 	- clearsilver template engine,
-	- markdown text format for posts,
+	- markdown text format for posts using discount,
 	- tags support,
 	- no SQL engine,
 	- plain text format
