Removes in README the discount dependency

--- a/README
+++ b/README
@@ -3,7 +3,7 @@ CBlog is a blog engine written in C
 it is licensed under the new BSD license.
 it features : 
 	- clearsilver template engine,
-	- markdown text format for posts using discount,
+	- markdown text format for posts using Natacha's markdown parser (embeded see markdown.{c,h})
 	- tags support,
 	- no SQL engine,
 	- plain text format
