--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
 reimplements comments
 add CBlog.version to hdf
 add CBlog.www to hdf
+add the ability to browse/watch post through : /YYYY/MM/DD, /YYYY/MM or /YYYY
