--- a/TODO
+++ b/TODO
@@ -2,3 +2,4 @@ reimplements comments
 add CBlog.version to hdf
 add CBlog.www to hdf
 add the ability to browse/watch post through : /YYYY/MM/DD, /YYYY/MM or /YYYY
+add the ability to accept multiple / like http://bla//post... 
