--- a/TODO
+++ b/TODO
@@ -2,4 +2,5 @@ reimplements comments
 add CBlog.version to hdf
 add CBlog.www to hdf
 add the ability to browse/watch post through : /YYYY/MM/DD, /YYYY/MM or /YYYY
-add the ability to accept multiple / like http://bla//post... 
+add the ability to accept multiple / like http://bla//post...
+allow to load external hdf (this can be use to import in the blog information from third party apps : rss feed, weather forcast etc.)
