--- a/TODO
+++ b/TODO
@@ -1,6 +1,5 @@
-reimplements comments
-add CBlog.version to hdf
-add CBlog.www to hdf
+change comment backend from files to cdb (don't know if it is a good idea or not)
+add CBlog.version to hdf (from the C code)
+add CBlog.www to hdf (website of cblog - on brokk - )
 add the ability to browse/watch post through : /YYYY/MM/DD, /YYYY/MM or /YYYY
-add the ability to accept multiple / like http://bla//post...
 allow to load external hdf (this can be use to import in the blog information from third party apps : rss feed, weather forcast etc.)
