libsoldout is no more bundled

--- a/README
+++ b/README
@@ -3,6 +3,6 @@ CBlog is a blog engine written in C
 it is licensed under the new BSD license.
 it features : 
 	- clearsilver template engine,
-	- markdown text format for posts using Natacha's markdown parser (embeded see markdown.{c,h})
+	- markdown text format for posts using libsoldout
 	- tags support,
 	- plain text format
